--- a/Write/CommandServer/appsettings.json
+++ b/Write/CommandServer/appsettings.json
@@ -1,4 +1,10 @@
 {
+	"RabbitConfig": {
+		"HostName": "localhost",
+		"Port": "5672",
+		"UserName": "guest",
+		"Password": "guest"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Warning"
