--- a/Write/CommandServer/Properties/launchSettings.json
+++ b/Write/CommandServer/Properties/launchSettings.json
@@ -1,30 +1,30 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
-    "iisExpress": {
-      "applicationUrl": "http://localhost:6996",
-      "sslPort": 44379
-    }
-  },
-  "profiles": {
-	"IIS Express": {
-		"commandName": "IISExpress",
-		"launchBrowser": true,
-		"launchUrl": "api/course",
-		"environmentVariables": {
-			"ASPNETCORE_ENVIRONMENT": "Development"
+	"$schema": "http://json.schemastore.org/launchsettings.json",
+	"iisSettings": {
+		"windowsAuthentication": false,
+		"anonymousAuthentication": true,
+		"iisExpress": {
+			"applicationUrl": "http://localhost:5000",
+			"sslPort": 0
 		}
 	},
-    "CommandServer": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/course",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
+	"profiles": {
+		"IIS Express": {
+			"commandName": "IISExpress",
+			"launchBrowser": true,
+			"launchUrl": "api/v1/values/get",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		},
+		"ProductCatalog.WebService": {
+			"commandName": "Project",
+			"launchBrowser": true,
+			"launchUrl": "api/v1/values/get",
+			"applicationUrl": "http://localhost:5000",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		}
+	}
 }
