--- a/Write/CommandHandlers/CommandHandlers.csproj
+++ b/Write/CommandHandlers/CommandHandlers.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\InfrastructureBus\ServiceBus\ServiceBus.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\DataAccess\Repository.Contracts\Repository.Contracts.csproj" />
     <ProjectReference Include="..\Commands\Commands.csproj" />
+    <ProjectReference Include="..\OnlineCourse.Repository.Entity\OnlineCourse.Repository.Entity.csproj" />
   </ItemGroup>
 
 </Project>
