--- a/Write/CommandServer/Properties/launchSettings.json
+++ b/Write/CommandServer/Properties/launchSettings.json
@@ -12,7 +12,7 @@
 		"IIS Express": {
 			"commandName": "IISExpress",
 			"launchBrowser": true,
-			"launchUrl": "api/course",
+			"launchUrl": "api/course/participants",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
@@ -20,7 +20,7 @@
 		"ProductCatalog.WebService": {
 			"commandName": "Project",
 			"launchBrowser": true,
-			"launchUrl": "api/course",
+			"launchUrl": "api/course/participants",
 			"applicationUrl": "http://localhost:5000",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
