--- a/Query/QueryServer/Properties/launchSettings.json
+++ b/Query/QueryServer/Properties/launchSettings.json
@@ -1,30 +1,30 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
-    "iisExpress": {
-      "applicationUrl": "http://localhost:26906",
-      "sslPort": 44318
+    "$schema": "http://json.schemastore.org/launchsettings.json",
+    "iisSettings": {
+        "windowsAuthentication": false,
+        "anonymousAuthentication": true,
+        "iisExpress": {
+            "applicationUrl": "http://localhost:5001",
+            "sslPort": 0
+        }
+    },
+    "profiles": {
+        "IIS Express": {
+            "commandName": "IISExpress",
+            "launchBrowser": true,
+            "launchUrl": "api/course",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        "QueryServer": {
+            "commandName": "Project",
+            "launchBrowser": true,
+            "launchUrl": "api/course",
+            "applicationUrl": "https://localhost:5001",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        }
     }
-  },
-  "profiles": {
-	"IIS Express": {
-		"commandName": "IISExpress",
-		"launchBrowser": true,
-		"launchUrl": "api/course",
-		"environmentVariables": {
-			"ASPNETCORE_ENVIRONMENT": "Development"
-		}
-	},
-    "QueryServer": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/course",
-      "applicationUrl": "https://localhost:5001;http://localhost:5002",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
 }
